# 8Steps3DSelfie

./: 8Steps3DSelfie.cpp  CMakeLists.txt  README.md
scripts/: 8Steps3DSelfie.sh
